--- a/dot_config/zsh/dot_zshenv.tmpl
+++ b/dot_config/zsh/dot_zshenv.tmpl
@@ -14,11 +14,17 @@ export XDG_DOWNLOAD_DIR="$HOME/Downloads"
 export XDG_PICTURES_DIR="$HOME/Pictures"
 
 # homebrew
-{{ if eq .chezmoi.arch "arm64" }}
+{{- if eq .chezmoi.arch "arm64" }}
 eval "$(/opt/homebrew/bin/brew shellenv)"
-{{ else }}
+{{- else }}
 eval "$(/usr/local/bin/brew shellenv)"
-{{ end }}
+{{- end }}
+
+# asdf
+export ASDF_CONFIG_FILE="${XDG_CONFIG_DIR}/asdf/.asdfrc"
+. $HOMEBREW_PREFIX/opt/asdf/libexec/asdf.sh
+. ~/.asdf/plugins/java/set-java-home.zsh
+. ~/.asdf/plugins/golang/set-env.zsh
 
 # include local env file
 if [[ -f ~/.zshenv.local ]]; then
