--- a/dot_config/zsh/dot_zshenv.tmpl
+++ b/dot_config/zsh/dot_zshenv.tmpl
@@ -4,11 +4,13 @@ export TERMINAL=alacritty
 
 paths=(
 	$HOME/bin
+	$HOME/.local/bin
 	/usr/local/sbin
 )
 export PATH=$(IFS=: ; echo "${paths[*]}"):$PATH
 
 export XDG_CONFIG_DIR="$HOME/.config"
+export XDG_CONFIG_HOME="$HOME/.config"
 export XDG_DATA_DIR="$HOME/.local/share"
 export XDG_DOWNLOAD_DIR="$HOME/Downloads"
 export XDG_PICTURES_DIR="$HOME/Pictures"
@@ -25,6 +27,11 @@ export ASDF_CONFIG_FILE="${XDG_CONFIG_DIR}/asdf/.asdfrc"
 . $HOMEBREW_PREFIX/opt/asdf/libexec/asdf.sh
 . ~/.asdf/plugins/java/set-java-home.zsh
 . ~/.asdf/plugins/golang/set-env.zsh
+
+if [ "$TERMINAL_EMULATOR" != "JetBrains-JediTerm" ]; then
+    ZSH_TMUX_AUTOSTART=true
+    ZSH_TMUX_AUTOCONNECT=false
+fi
 
 # include local env file
 if [[ -f ~/.zshenv.local ]]; then
